--- a/.github/workflows/Fernando.yml
+++ b/.github/workflows/Fernando.yml
@@ -27,7 +27,7 @@ jobs:
   
   job4:
     name: job4
-    runs-on: macos-latest
+    runs-on: ubunt-latest
     needs: [job1, job2 ,job3]
     steps:
       - name: etapa 4
