--- a/.github/workflows/Var_Ambiente.yml
+++ b/.github/workflows/Var_Ambiente.yml
@@ -1,5 +1,3 @@
-name: test2
-
 on:
   push:
     branches:
@@ -9,7 +7,7 @@ env:
   VAR_NAME: arquivo
   
 jobs:
-    job1:
+  job:
     runs-on: ubuntu-latest
       
     steps:
@@ -18,6 +16,6 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v2.2.2
       with:
-        name: ${{ env.VAR_NAME }}
+        name: ${{env.VAR_NAME}}
         path: .
         if-no-files-found: warn
