--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,9 +9,14 @@ on:
   pull_request:
     branches: [ main ]
     
+#JOB1 - INICIO
+
+#-------------------------------------------------------------------------------#
+#                           TESTE UNITARIOS                                     #
+#-------------------------------------------------------------------------------#
 
 jobs:
-  build:
+  job1:
     name: Build and Test
     runs-on: ubuntu-latest
 
@@ -29,29 +34,14 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test --if-present
-  
-  
-  prettier:
-    name: Prettier
-    runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        # Make sure the actual branch is checked out when running on pull requests
-        ref: ${{ github.head_ref }}
+  #JOB2 - INICIO
 
-    - name: Prettify code
-      uses: creyD/prettier_action@v3.1
-      with:
-        # This part is also where you can pass other options, for example:
-        prettier_options: --write **/*.{js,md}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#-------------------------------------------------------------------------------#
+#                           LINTER                                     #
+#-------------------------------------------------------------------------------#
   
-  
-  linter:
+  job2:
     name: Lint code base
     runs-on: ubuntu-latest
     
@@ -71,15 +61,37 @@ jobs:
           VALIDATE_CSS: true
           VALIDATE_MARKDOWN: true
           JAVASCRIPT_DEFAULT_STYLE: prettier
-  
-  
-  deploy:
+
+#-------------------------------------------------------------------------------#
+# Teste de Qualidade SonarCloud                                                 #
+#-------------------------------------------------------------------------------#
+
+  job3:
+    name: Quality Test SonarCloud
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Build and analyze
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}          
+  
+    #JOB3 - INICIO
+
+#-------------------------------------------------------------------------------#
+#                           DEPLOY   HOMOLOGACAO                                  #
+#-------------------------------------------------------------------------------#
+  
+  job4:
+    runs-on: ubuntu-latest
+    needs: [job1, job2]
     env:
       DB_URI: $${{ secrets.DB_URI }}
       NODE_ENV: production
-      
-    needs: [build, prettier]
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -91,12 +103,51 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.10.9 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: pedrolacerda-local-library
-          heroku_email: pedrohrl1@gmail.com
+          heroku_app_name: devopslab-fernando-qa
+          heroku_email: fernandorberto
           justlogin: true
       
       - name: Set Heroku remote
-        run: heroku git:remote -a pedrolacerda-local-library
+        run: heroku git:remote -a devopslab-fernando-qa
+      
+      - name: Set env variables
+        run: |
+          heroku config:set NODE_ENV=${{ env.NODE_ENV }}
+          heroku config:set MONGODB_URI=${{ env.DB_URI }}
+      
+      - name: Push code to Heroku
+        run: git push heroku main
+
+            #JOB3 - INICIO
+
+#-------------------------------------------------------------------------------#
+#                           DEPLOY   EM PRODUCAO                                #
+#-------------------------------------------------------------------------------#
+  
+  job5:
+    runs-on: ubuntu-latest
+    needs: [job4]
+    env:
+      DB_URI: $${{ secrets.DB_URI }}
+      NODE_ENV: production
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+        with:
+          # Full git history is needed to build on Heroku
+          fetch-depth: 0
+      
+      - name: Login Heroku
+        uses: akhileshns/heroku-deploy@v3.10.9 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: devopslab-fernando
+          heroku_email: fernandorberto
+          justlogin: true
+      
+      - name: Set Heroku remote
+        run: heroku git:remote -a devopslab-fernando
       
       - name: Set env variables
         run: |
