--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -88,9 +88,8 @@ jobs:
   job4:
     runs-on: ubuntu-latest
     needs: [job1, job2]
-    env:
-      DB_URI: $${{ secrets.DB_URI }}
-      NODE_ENV: production
+    environment:
+      name: 'HOM'
 
     steps:
       - name: Checkout Code
@@ -112,8 +111,8 @@ jobs:
       
       - name: Set env variables
         run: |
-          heroku config:set NODE_ENV=${{ env.NODE_ENV }}
-          heroku config:set MONGODB_URI=${{ env.DB_URI }}
+          heroku config:set NODE_ENV='mongodb+srv://dba:s2OuCobCglTtech6@cluster0.uiv1l.mongodb.net/local_library_dev?retryWrites=true'
+          heroku config:set MONGODB_URI=<string_de_conexao_do_banco> npm run devstart
       
       - name: Push code to Heroku
         run: git push heroku main
@@ -127,9 +126,8 @@ jobs:
   job5:
     runs-on: ubuntu-latest
     needs: [job4]
-    env:
-      DB_URI: $${{ secrets.DB_URI }}
-      NODE_ENV: production
+    environment:
+      name: 'PROD'
 
     steps:
       - name: Checkout Code
@@ -151,8 +149,8 @@ jobs:
       
       - name: Set env variables
         run: |
-          heroku config:set NODE_ENV=${{ env.NODE_ENV }}
-          heroku config:set MONGODB_URI=${{ env.DB_URI }}
+          heroku config:set NODE_ENV=mongodb+srv://dba:s2OuCobCglTtech6@cluster0.uiv1l.mongodb.net/local_library?retryWrites=true
+          heroku config:set MONGODB_URI=<string_de_conexao_do_banco> npm run start
       
       - name: Push code to Heroku
         run: git push heroku main
