--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -103,7 +103,7 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: devopslab-fernando-qa
-          heroku_email: fernandorberto
+          heroku_email: fernandorberto@gmail.com
           justlogin: true
       
       - name: Set Heroku remote
@@ -140,8 +140,8 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.10.9 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: devopslab-fernando
-          heroku_email: fernandorberto
+          heroku_app_name: devops-fernando
+          heroku_email: fernandorberto@gmail.com
           justlogin: true
       
       - name: Set Heroku remote
