--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -85,7 +85,7 @@ jobs:
 #                           DEPLOY   HOMOLOGACAO                                  #
 #-------------------------------------------------------------------------------#
   
-  job4:
+  deploy-to-hom:
     runs-on: ubuntu-latest
     needs: [job1, job2]
     environment:
@@ -123,7 +123,7 @@ jobs:
 #                           DEPLOY   EM PRODUCAO                                #
 #-------------------------------------------------------------------------------#
   
-  job5:
+  deploy-to-prod:
     runs-on: ubuntu-latest
     needs: [job4]
     environment:
@@ -140,12 +140,12 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.10.9 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: devops-fernando
+          heroku_app_name: projeto-final-prod
           heroku_email: fernandorberto@gmail.com
           justlogin: true
       
       - name: Set Heroku remote
-        run: heroku git:remote -a devopslab-fernando
+        run: heroku git:remote -a projeto-final-prod
       
       - name: Set env variables
         run: |
