--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -85,7 +85,7 @@ jobs:
 #                           DEPLOY   HOMOLOGACAO                                  #
 #-------------------------------------------------------------------------------#
   
-  deploy-to-hom:
+  job4:
     runs-on: ubuntu-latest
     needs: [job1, job2]
     environment:
@@ -123,9 +123,9 @@ jobs:
 #                           DEPLOY   EM PRODUCAO                                #
 #-------------------------------------------------------------------------------#
   
-  deploy-to-prod:
+  job5:
     runs-on: ubuntu-latest
-    needs: [job4]
+    needs: [job2,job3,job4]
     environment:
       name: 'PROD'
 
