--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -86,6 +86,7 @@ jobs:
 #-------------------------------------------------------------------------------#
   
   job4:
+    name: Deploy-HOM
     runs-on: ubuntu-latest
     needs: [job1, job2]
     environment:
@@ -124,6 +125,7 @@ jobs:
 #-------------------------------------------------------------------------------#
   
   job5:
+    name: Deploy-PROD
     runs-on: ubuntu-latest
     needs: [job2,job3,job4]
     environment:
